Fooling around with EC2 bootstrapping

--- a/inventories/dev.ini
+++ b/inventories/dev.ini
@@ -1,2 +1,3 @@
 [dev]
 #klegg ansible_user=gothick ansible_python_interpreter=auto_silent
+34.206.218.126 ansible_user=ansible ansible_python_interpreter=auto_silent
