--- a/inventories/dev.ini
+++ b/inventories/dev.ini
@@ -1,3 +1,4 @@
 [dev]
 #klegg ansible_user=gothick ansible_python_interpreter=auto_silent
-34.206.218.126 ansible_user=ansible ansible_python_interpreter=auto_silent
+34.206.218.126 ansible_user=ubuntu ansible_python_interpreter=auto_silent ansible_ssh_private_key_file=~/.ssh/ansible
+
