Minor task name change

--- a/roles/useful_tools/tasks/main.yml
+++ b/roles/useful_tools/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install basic tools
+- name: Install tools we find generally useful, e.g. emacs, unzip
   ansible.builtin.apt:
     state: present
     update_cache: true
