--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,7 @@
 [defaults]
+# Default to safety. You can run against *everything* with -i inventories, as
+# specifying a directory loads all the inventories in that directory, or just
+# specify multiple -i flags.
 inventory = inventories/dev.aws_ec2.yml
 # Use the YAML callback plugin.
 stdout_callback = yaml
