--- a/provisioners/ec2.yml
+++ b/provisioners/ec2.yml
@@ -108,7 +108,7 @@
         ansible_ssh_private_key_file: ~/.ssh/ansible
       with_items: "{{ newinstances.results }}"
 
-- name: "No on to the hosts!"
+- name: "Now on to the hosts!"
   hosts: new
   become: true
   gather_facts: false
