--- a/roles/basics/tasks/main.yml
+++ b/roles/basics/tasks/main.yml
@@ -1,11 +1,8 @@
 ---
-- name: Update apt packages, but only once.
-  # We may configure more regular updates, or run them through ansible every
-  # now and again. *This* one-time update happens very early on in our
-  # bootstrapping process to make sure everything's up to date before we
-  # start.
+- name: Update apt packages
+  # TODO: Do we want to limit this so we don't kick off every run with it? I suppose
+  # it depends how often we want to run the playbooks...
   ansible.builtin.apt:
     upgrade: true
     update_cache: true
     cache_valid_time: 3600
-  run_once: true
