Helps to use the right variable to get the public IP address

--- a/inventories/dev.aws_ec2.yml
+++ b/inventories/dev.aws_ec2.yml
@@ -1,4 +1,5 @@
 plugin: amazon.aws.aws_ec2
+strict: True
 
 # Yee haw
 regions:
@@ -28,4 +29,5 @@ keyed_groups:
 # We use the public ipv4 IP address to connect via ssh; this is the
 # Elastic IP if the host has one.
 compose:
-  ansible_host: ip-address
+  ansible_host: public_ip_address
+
