--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,4 +6,4 @@ inventory = inventories/dev.aws_ec2.yml
 # Use the YAML callback plugin.
 stdout_callback = yaml
 # Use the stdout_callback when running ad-hoc commands.
-bin_ansible_callbacks = True
+#bin_ansible_callbacks = True
