Add awscli role

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,3 +7,12 @@ inventory = inventories/dev.aws_ec2.yml
 stdout_callback = yaml
 # Use the stdout_callback when running ad-hoc commands.
 #bin_ansible_callbacks = True
+
+# Chick-Fil-A would like a word...
+# nocows = True
+
+# Installs collections into [current dir]/ansible_collections/namespace/collection_name
+collections_path = ./
+
+# Installs roles into [current dir]/roles/namespace.rolename
+roles_path = ./roles
