--- a/ansible.cfg
+++ b/ansible.cfg
@@ -16,3 +16,5 @@ collections_path = ./
 
 # Installs roles into [current dir]/roles/namespace.rolename
 roles_path = ./roles
+
+vault_password_file = ~/.ansible/vault_pass.txt
