--- a/requirements.yml
+++ b/requirements.yml
@@ -4,10 +4,13 @@ roles:
 - name: gothick.awscli
   src: https://github.com/gothick/ansible-awscli.git
 
+- name: arillso.sudoers
+  version: 2.3.0
+
 collections:
   - name: basicbind.swap_file
     version: 2.0.3
-    
+
 #  - name: boutetnico.awscli
 #    version: 5.0.0
 
