web_users role basically working

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -18,3 +18,9 @@ collections_path = ./
 roles_path = ./roles
 
 vault_password_file = ~/.ansible/vault_pass.txt
+
+# Because sometimes I want to become an unprivileged user and
+# do something unsensitive like installing oh-my-zsh for them,
+# and I really can't be arsed to remount / with acls enabled
+# just so Ansible can set the file permissions.
+allow_world_readable_tmpfiles=True
