--- a/roles/web_users/defaults/main.yml
+++ b/roles/web_users/defaults/main.yml
@@ -1,20 +1,18 @@
 ---
 web_users_zsh_theme: fishy
 web_users_default_shell: /bin/bash
+
+# Example
 web_users_users:
   - username: gothick
     shell: /bin/zsh
-  - username: wordpress
-    shell: /bin/zsh
-  - username: uniquesentence
-    shell: /bin/zsh
-  - username: mattgibsoncreative
-    shell: /bin/zsh
-  - username: meditationchimer
-    shell: /bin/zsh
-  - username: onthescales
-    shell: /bin/zsh
-  # omm and fresher need bash for some reason; can't remember
-  # now but I'm betting it's something to do with Deployer.
   - username: omm
-  - username: fresher
+
+# Example
+web_users_authorised_keys:
+  - username: gothick
+    key: "{{ some_key_here }}"
+  - username: gothick
+    key: "{{ some_key_here_for_same_user }}"
+  - username: onthescales
+    key: "{{ different_user_different_key }}"
