--- a/playbooks/web_users/group_vars/all/web_users.yml
+++ b/playbooks/web_users/group_vars/all/web_users.yml
@@ -2,6 +2,10 @@
 web_users_zsh_theme: fishy
 web_users_default_shell: /bin/bash
 web_users_users:
+  - username: andyetanothertest
+  - username: anothertest
+  - username: doesitwork
+    shell: /bin/zsh
   - username: gothick
     shell: /bin/zsh
   - username: wordpress
@@ -18,6 +22,13 @@ web_users_users:
   # now but I'm betting it's something to do with Deployer.
   - username: omm
   - username: fresher
+
+web_users_sudoers:
+  gothick:
+    privileges:
+      - name: gothick
+        entry: 'ALL=(ALL) NOPASSWD:ALL'
+
 
 _web_users_key_main_mac: "{{ lookup('ansible.builtin.file', 'authorised_key_main_mac') }}"
 _web_users_key_chromebook: "{{ lookup('ansible.builtin.file', 'authorised_key_chromebook') }}"
