--- a/roles/gothick.awscli/meta/main.yml
+++ b/roles/gothick.awscli/meta/main.yml
@@ -6,6 +6,8 @@ galaxy_info:
   description: Install and configure awscli in a quick and dirty way on my Ubuntu 24.04 box
   license: MIT
   min_ansible_version: "2.10"
+  platforms:
+    - name: Ubuntu
   galaxy_tags:
     - amazon
     - aws
