--- a/ansible.cfg
+++ b/ansible.cfg
@@ -24,3 +24,7 @@ vault_password_file = ~/.ansible/vault_pass.txt
 # and I really can't be arsed to remount / with acls enabled
 # just so Ansible can set the file permissions.
 allow_world_readable_tmpfiles=True
+
+# Because life's too short, and who's going to run a man-in-the-
+# middle attack on *me*? I ain't worth it.
+host_key_checking = False
