--- a/provisioners/ec2.yml
+++ b/provisioners/ec2.yml
@@ -119,6 +119,10 @@
     - name: Wait for hosts to become reachable.
       ansible.builtin.wait_for_connection:
 
+    - name: Set hostname
+      ansible.builtin.hostname:
+        name: "{{ inventory_hostname }}"
+
     - name: Gather facts afresh now we can connect
       ansible.builtin.setup:
 
