--- a/inventories/vagrant.ini
+++ b/inventories/vagrant.ini
@@ -1,2 +1,2 @@
-[web]
-192.168.56.2 ansible_user=ansible ansible_ssh_private_key_file=~/.ssh/ansible
+[dev]
+vagrant ansible_ssh_host=192.168.56.2 ansible_user=ansible ansible_ssh_private_key_file=~/.ssh/ansible
