--- a/playbooks/web_apache/main.yml
+++ b/playbooks/web_apache/main.yml
@@ -3,9 +3,16 @@
   hosts: all
   become: true
 
-  vars_files:
-  #   - vault.yml
-    - vars.yml
-
   roles:
     - geerlingguy.apache
+
+  # TODO: Remove this once PHP is up and running
+  tasks:
+    - name: Install PHP test script
+      ansible.builtin.template:
+        src: phpinfo.php.j2
+        dest: /var/www/html/phpinfo.php
+        owner: root
+        group: root
+        mode: '0744'
+      when: apache_add_test_php_file is defined and apache_add_test_php_file | bool
