Got php-fpm running, at least. Need to configure a test site that actually uses it, mind.

--- a/playbook.yml
+++ b/playbook.yml
@@ -35,3 +35,6 @@
 
 - name: Install and configure basic Apache
   import_playbook: playbooks/web_apache/main.yml
+
+- name: Install and configure PHP-FPM
+  import_playbook: playbooks/web_php/main.yml
