--- a/requirements.yml
+++ b/requirements.yml
@@ -13,6 +13,9 @@ roles:
 - name: geerlingguy.apache
   version: 4.0.0
 
+- name: geerlingguy.php
+  version: 6.0.0
+
 collections:
   - name: basicbind.swap_file
     version: 2.0.3
