Got the Apache modules we need enabled for php-fpm

--- a/playbooks/web_apache/group_vars/dev/apache.yml
+++ b/playbooks/web_apache/group_vars/dev/apache.yml
@@ -1,3 +1,4 @@
 # Because it can be handy in dev
 apache_remove_default_vhost: false
+# TODO: Take this out; it should be in the PHP playbook if it's anywhere.
 apache_add_test_php_file: true
