--- a/playbooks/web_php/main.yml
+++ b/playbooks/web_php/main.yml
@@ -6,7 +6,7 @@
   vars_files:
     - vars.yml
 
-  tasks:
+  pre_tasks:
     - name: Install various PHP dependencies
       ansible.builtin.apt:
         state: present
