--- a/playbooks/web_php/vars.yml
+++ b/playbooks/web_php/vars.yml
@@ -13,3 +13,28 @@ php_packages_extra:
 php_enable_php_fpm: true
 
 php_date_timezone: "UTC"
+
+php_phptest_dir: "/var/www/phptest"
+php_phptest_conf_name: "phptest.conf"
+
+# In the dev environment, we set up a test website that
+# uses the default pool, so we need to parameterise
+# its listening socket.
+php_www_pool_listen: "127.0.0.1:9000"
+
+php_apache_server_root: "/etc/apache2"
+
+# Create just the dev pool for now. Individual websites
+# might create others for themselves in different
+php_fpm_pools:
+  - pool_name: www
+    pool_template: www.conf.j2
+    pool_listen: "{{ php_www_pool_listen }}"
+    pool_listen_allowed_clients: "127.0.0.1"
+    pool_pm: dynamic
+    pool_pm_max_children: 5
+    pool_pm_start_servers: 2
+    pool_pm_min_spare_servers: 1
+    pool_pm_max_spare_servers: 3
+    pool_pm_max_requests: 500
+    pool_pm_status_path: /status
