--- a/playbooks/web_default_site/main.yml
+++ b/playbooks/web_default_site/main.yml
@@ -5,3 +5,56 @@
 
   vars_files:
     - vars.yml
+
+  tasks:
+    - name: Create default site folder
+      ansible.builtin.file:
+        path: "{{ default_site_path }}"
+        state: directory
+        mode: '0755'
+        owner: root
+        group: root
+      tags:
+        - phptest
+
+    - name: Install default site index
+      ansible.builtin.template:
+        src: index.html.j2
+        dest: "{{ default_site_path }}/index.html"
+        owner: root
+        group: root
+        mode: '0644'
+
+    - name: Install default site http configuration
+      ansible.builtin.template:
+        src: "000-default.conf.j2"
+        dest: "{{ php_apache_server_root }}/sites-available/{{ default_conf_name }}"
+        owner: root
+        group: root
+        mode: '0644'
+
+    - name: Install default site http configuration
+      ansible.builtin.template:
+        src: "default-ssl.conf.j2"
+        dest: "{{ php_apache_server_root }}/sites-available/{{ default_conf_ssl_name }}"
+        owner: root
+        group: root
+        mode: '0644'
+
+    - name: Enable default site
+      ansible.builtin.command: a2ensite {{ default_conf_name }}
+      register: site_result
+      notify: Reload apache
+      changed_when: "'Enabling site' in site_result.stdout"
+
+    - name: Enable default-ssl site
+      ansible.builtin.command: a2ensite {{ default_conf_ssl_name }}
+      register: site_result
+      notify: Reload apache
+      changed_when: "'Enabling site' in site_result.stdout"
+
+  handlers:
+    - name: Reload apache
+      ansible.builtin.service:
+        name: apache2
+        state: reloaded
