--- a/playbook.yml
+++ b/playbook.yml
@@ -44,5 +44,8 @@
 - name: Add a default Apache site
   import_playbook: playbooks/web_default_site/main.yml
 
+- name: Add a default dev site (possibly with https) for testing/dev info, only in dev environment
+  import_playbook: playbooks/web_dev_site/main.yml
+
 - name: Install and configure PHP-FPM
   import_playbook: playbooks/web_php/main.yml
