--- a/playbooks/web_dev_site/main.yml
+++ b/playbooks/web_dev_site/main.yml
@@ -59,7 +59,7 @@
     # kind yet.
     - name: Check if any kind of certificate exists
       ansible.builtin.stat:
-        path: /etc/ssl/certs/ssl-cert-dev.pem
+        path: "{{ dev_cert_path }}"
       register: cert_path
 
     - name: Create self-signed cert only if we don't already have a cert of any kind
@@ -67,20 +67,20 @@
       block:
         - name: Create private key for a self-signed certificate (RSA, 4096 bits)
           community.crypto.openssl_privatekey:
-            path: /etc/ssl/private/ssl-cert-dev.key
+            path: "{{ dev_key_path }}"
             # Because we don't want to overwite a valid Let's Encrypt certificate
             # so we only create the key if there's nothing there at all yet.
             regenerate: never
             type: RSA
         - name: Create simple self-signed certificate
           community.crypto.x509_certificate:
-            path: /etc/ssl/certs/ssl-cert-dev.pem
-            privatekey_path: /etc/ssl/private/ssl-cert-dev.key
+            path: "{{ dev_cert_path }}"
+            privatekey_path: "{{ dev_key_path }}"
             provider: selfsigned
           when: "not cert_path.stat.exists"
 
     - name: Enable default-ssl site
-      ansible.builtin.command: a2ensite {{ dev_conf_ssl_name }}
+      ansible.builtin.command: "a2ensite {{ dev_conf_ssl_name }}"
       register: site_result
       notify: Reload apache
       changed_when: "'Enabling site' in site_result.stdout"
