--- a/playbooks/web_dev_site/vars.yml
+++ b/playbooks/web_dev_site/vars.yml
@@ -4,3 +4,5 @@ dev_server_name: dev.gothick.org.uk
 php_apache_server_root: /etc/apache2
 dev_conf_name: "dev.conf"
 dev_conf_ssl_name: "dev-ssl.conf"
+dev_key_path: /etc/ssl/private/ssl-cert-dev.key
+dev_cert_path: /etc/ssl/certs/ssl-cert-dev.pem
