--- a/playbooks/web_dev_site/vars.yml
+++ b/playbooks/web_dev_site/vars.yml
@@ -1,5 +1,6 @@
 ---
 dev_site_path: /var/www/sites/dev
+well_known_dir: /var/www/well-known/dev
 dev_server_name: dev.gothick.org.uk
 php_apache_server_root: /etc/apache2
 dev_conf_name: "dev.conf"
